# subtitle-tool

./: .gitignore  README.md  package-lock.json
.claude/: settings.local.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  bin_path.rs  commands.rs  gemini.rs  lib.rs  main.rs  progress.rs  settings.rs  subtitle.rs  whisper.rs
ui/: app.js  boot.js  index.html  styles.css
ui/modules/: file.js  log.js  progress.js  settings.js
