[package]
name = "subtitle-tool"
version = "1.0.0"
edition = "2021"

[lib]
name = "subtitle_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "subtitle-tool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
